[package]
name = "starknet_api"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
alloc = []
testing = []

[dependencies]
hex = { version = "0.4.3", default-features = false }
indexmap = { version = "1.9.2", features = ["serde"], default-features = false }
serde = { version = "1.0.130", features = [
    "derive",
    "rc",
], default-features = false }
serde_json = { version = "1.0.81", default-features = false }
starknet-crypto = { version = "0.3.0", default-features = false }
web3 = { version = "0.18.0", default-features = false }
derive_more = { version = "0.99.17", default-features = false }
hashbrown = { version = "0.13.2", features = ["serde"] }

[dev-dependencies]
assert_matches = { version = "1.5.0" }
